# anEKGSimulator

./: CMakeLists.txt  Explanation.notes  Explanation_Cpp.notes  Explanation_Cpp_Qt5.notes  Explanation_Cpp_Qt6.notes  Explanation_Python.notes  Main.qml  README.md  build.sh  configure.notes  ekgmodel.cpp  ekgmodel.h  ekgviewmodel.cpp  ekgviewmodel.h  gmake.notes  main.cpp  qml.qrc  qt5.notes  resources.qrc
qml/: EKGView.qml  main.qml
src/: ekgcontroller.cpp  ekgcontroller.h  ekgmodel.cpp  ekgmodel.h  ekgplot.cpp  ekgplot.h  ekgviewmodel.cpp  ekgviewmodel.h  main.cpp
